frontend/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: jawher27/platform-frontend:1.0.27
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          volumeMounts:
            - name: env-config-volume
              mountPath: /usr/share/nginx/html/env.js
              subPath: env.js
      volumes:
        - name: env-config-volume
          configMap:
            name: frontend-env-config
