frontend/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: platform
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - vermeg-internship.me
        - www.vermeg-internship.me
      secretName: frontend-tls
  rules:
    - host: vermeg-internship.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80


    - host: www.vermeg-internship.me
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend-service
              port:
                number: 80
